<resources>
    <string name="app_name">WalletApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="lorem">Lorem ipsum</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="sort_expenses_by">Sort expenses by:</string>
    <string name="back">back</string>
    <string name="datepicker">datePicker</string>
    <string name="category">Category</string>
    <string name="description_optional">Description (optional)</string>
    <string name="cost">Cost</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <string name="opis_3n">(\nbrak opisu\n)</string>
    <string name="go_back">Go back</string>
    <string name="chart_of_money_spent_in_each_category">Chart of money spent in each category</string>
    <string name="passwords_match">Passwords match</string>
    <string name="_0_9">0-9</string>
    <string name="a_z">A-Z</string>
    <string name="_a_z">a-z</string>
    <string name="length">length</string>
    <string name="password_complexity">Password complexity</string>
    <string name="correct_email">Correct email</string>
    <string name="requirements">Requirements</string>
    <string name="bank_account">Bank account</string>
    <string name="phone_number">Phone number</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="summary">Summary</string>
    <string name="expenses">Expenses</string>
    <string name="mywallet">myWallet</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password_auto">Mywallet1</string>
    <string name="email_auto">mywallet@wallet.app</string>
    <string name="login_into_account">Login into account</string>
    <string name="new_expense">New expense</string>
    <string name="create">Create</string>
    <string name="web_client_id">563714080525-qp99hs2udoi4etlso9d6c9fuaoa4od85.apps.googleusercontent.com</string>
    <string name="sign_in_or_sign_up_with_google">Sign-In or Sign-Up with Google</string>
    <string name="oauth">oAuth</string>
    <string name="submit">Submit</string>
    <string name="copy">copy</string>
    <string name="add_expense">Add expense</string>
    <string name="add_user">Add user</string>
    <string name="new_group">New group</string>
    <string name="select_group">Select group</string>
    <string name="calculate_best_split">Calculate best split</string>
</resources>