<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FItemEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fitemedit_et_titleEDIT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="title"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- COST -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fitemedit_et_costEDIT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="cost"
                    android:hint="@string/cost"
                    android:inputType="numberDecimal"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- OPIS -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fitemedit_et_descEDIT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_optional"
                    android:inputType="text"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:endIconTint="@color/purple_500">

                <AutoCompleteTextView
                    android:id="@+id/fitemedit_spinner_categoryEDIT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:inputType="none"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:strokeColor="@color/light_grey"
                    app:strokeWidth="1dp">

                    <Button
                        android:id="@+id/fitemedit_btn_datePickerEDIT"
                        style="?android:spinnerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/dark"
                        android:contentDescription="@string/datepicker"
                        android:textSize="20sp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fitemedit_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_backspace_60"
                app:tint="@color/purple_700" />

            <ImageView
                android:id="@+id/fitemedit_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_baseline_check_60"
                app:tint="@color/purple_700" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>