<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-black"
        android:text="Login into account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="4dp"
        app:contentPadding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_emailLOGIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="4dp"
        app:contentPadding="5dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passwordLOGIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="20dp"
        app:contentPadding="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:text="@string/login"
                android:textSize="22sp"
                app:cornerRadius="10dp"/>

            <TextView
                android:id="@+id/tv_loginLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:text="Don't have an account?"
                android:layout_marginTop="20dp"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gotoRegister"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_loginLabel"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="20dp"
                android:padding="8dp"
                android:text="@string/register"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="2dp"
                app:cornerRadius="10dp"
                android:textSize="22sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
